[gd_scene load_steps=6 format=3 uid="uid://tbrilfpbynu0"]

[ext_resource type="Script" uid="uid://babsemrxn6wxb" path="res://Scripts/typing_combat_manager.gd" id="1_m71kf"]
[ext_resource type="Texture2D" uid="uid://dwg51pakbffn7" path="res://Assets/Texture/UI Assets/Bren.png" id="2_fea5q"]
[ext_resource type="AudioStream" uid="uid://cbokxyne1qdio" path="res://Assets/Texture/UI Assets/Darkness - War Room.mp3" id="3_6boy0"]
[ext_resource type="Texture2D" uid="uid://6ytmbwixngak" path="res://Assets/Texture/UI Assets/Shattered Glass BGM.png" id="3_k80g3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fea5q"]
radius = 75.78641
height = 151.57281

[node name="TypingCombatManager" type="Node2D"]
script = ExtResource("1_m71kf")

[node name="Target" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Target"]
position = Vector2(582, 305.99997)
scale = Vector2(0.24632525, 0.24901623)
texture = ExtResource("2_fea5q")

[node name="HitArea" type="Area2D" parent="Target" groups=["target"]]

[node name="CircleShape2D" type="CollisionShape2D" parent="Target/HitArea"]
position = Vector2(580, 319)
skew = -0.45727625
shape = SubResource("CapsuleShape2D_fea5q")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LivesLabel" type="Label" parent="HUD"]
offset_left = 546.0
offset_top = 4.0
offset_right = 634.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 20
text = "LIVES: 5"

[node name="FeedbackLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -226.0
offset_right = 37.0
offset_bottom = -203.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Game Start"

[node name="ColorRect" type="TextureRect" parent="."]
z_index = -2
offset_left = -67.0
offset_top = -20.0
offset_right = 1234.0
offset_bottom = 695.0
texture = ExtResource("3_k80g3")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6boy0")
autoplay = true
parameters/looping = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
